--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <header>
-            ------------------------
+            do you want to go out with me?
     </header>
     
     <button class = "button-1" id="move" onmouseover="runaway(this)">No</button>
